unpackaged/main/default/objects/USAL_Payment_Data__c/USAL_Payment_Data__c.object-meta.xml
<CustomObject>
    <description>Payments to show those without a majesco license</description>
    <label>USAL Payment Data</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>USAL Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>USAL Payments Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>