unpackaged/main/default/objects/USAL_Payment_Data__c/fields/Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Check Date</label>
    <type>Date</type>
</CustomField>