unpackaged/main/default/objects/USAL_Payment_Data__c/fields/Check_Number__c.field-meta.xml
<CustomField>
    <fullName>Check_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Check Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>