unpackaged/main/default/objects/USAL_Payment_Data__c/fields/Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Issue_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Issue Date</label>
    <type>Date</type>
</CustomField>