unpackaged/main/default/objects/USAL_Payment_Data__c/fields/Net_After_Taxes__c.field-meta.xml
<CustomField>
    <fullName>Net_After_Taxes__c</fullName>
    <label>Net After Taxes</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>