unpackaged/main/default/objects/USAL_Payment_Data__c/fields/Net_Before_Taxes__c.field-meta.xml
<CustomField>
    <fullName>Net_Before_Taxes__c</fullName>
    <label>Net Before Taxes</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>