unpackaged/main/default/objects/USAL_Payment_Data__c/fields/Payment_Name__c.field-meta.xml
<CustomField>
    <fullName>Payment_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>