unpackaged/main/default/objects/USAL_Payment_Data__c/fields/Person__c.field-meta.xml
<CustomField>
    <fullName>Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>USAL_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>