unpackaged/main/default/objects/USAL_Payment_Data__c/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Start</label>
    <type>Date</type>
</CustomField>