unpackaged/main/default/objects/USAL_Payment_Data__c/fields/Through__c.field-meta.xml
<CustomField>
    <fullName>Through__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Through</label>
    <type>Date</type>
</CustomField>