unpackaged/main/default/objects/USAL_Payment_Data__c/fields/USAL_Claim_Data__c.field-meta.xml
<CustomField>
    <fullName>USAL_Claim_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>USAL Claim Data</label>
    <referenceTo>USAL_Claim_Data__c</referenceTo>
    <relationshipLabel>USAL Payments Data</relationshipLabel>
    <relationshipName>USAL_Payments_Data</relationshipName>
    <type>Lookup</type>
</CustomField>