unpackaged/main/default/objects/USAL_Payment_Data__c/fields/USAL_Payee_Name__c.field-meta.xml
<CustomField>
    <fullName>USAL_Payee_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>USAL Payee Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>